# BioASQ14b

./: .gitignore  COMMANDS_RICHARD_RUN.txt  TODO.md  commands_dprf.sh  commands_gen.sh  commands_inference.sh  commands_train.sh  compose.yaml  init.sql  models.md  pyproject.toml  qdrant_config.yaml  quorum.sh  splare.md  to_richard.txt
phaseB/: README.md  bioasq_format_converter.py  finetune_llm.py  lookup_abstract_Ap.py  make_submissions.sh  pyproject.toml  results_viewer.ipynb  run.sh  run_sweep.sh  run_sweepB.sh  run_synthesize.sh  tmp.ipynb  to_people.txt
phaseB-alex/: pyproject.toml  run.sh  run_ensemble_exact.sh  run_exact.sh  run_full_pipeline.sh  run_judge_select_merge.sh  run_local_grid.sh  run_queue.sh  run_reconcile_exact.sh  run_synthesis.sh  test.ipynb  test.sh
phaseB-alex/batch01-phaseB/outputs/exact/: anthropic-claude-sonnet-4-6_p5_abstracts_factoid.json  anthropic-claude-sonnet-4-6_p5_snippets_factoid.json  deepseek-ai-DeepSeek-R1-Distill-Qwen-32B_p5_snippets_list.json  deepseek-ai-DeepSeek-R1-Distill-Qwen-32B_p6_snippets_factoid.json  deepseek-deepseek-v3-2_p2_snippets_factoid.json  deepseek-deepseek-v3-2_p2_snippets_yesno.json  deepseek-deepseek-v3-2_p5_snippets_list.json  google-gemini-2-0-flash-001_p3_abstracts_factoid.json  google-gemini-2-0-flash-001_p3_abstracts_list.json  google-gemini-2-0-flash-001_p3_abstracts_yesno.json  google-gemini-2-0-flash-001_p3_snippets_factoid.json  google-gemini-2-0-flash-001_p3_snippets_yesno.json  openai-gpt-oss-20b_p2_snippets_factoid.json  openai-gpt-oss-20b_p2_snippets_yesno.json  openai-gpt-oss-20b_p6_snippets_list.json  qwen-qwen3-235b-a22b-2507_p3_snippets_factoid.json  qwen-qwen3-235b-a22b-2507_p6_snippets_list.json  qwen-qwen3-max-thinking_p6_abstracts_factoid.json  qwen-qwen3-max-thinking_p6_abstracts_list.json
phaseB-alex/batch01-phaseB/outputs/reconciled/: reconciled_factoid.json
phaseB-alex/batch01-phaseB/outputs/submission_phaseB/: Submission2_gemini_2-5_flash_qwen3_max_thinking_best_abstracts.json
phaseB-alex/evaluation/: evaluate.py  evaluation_exact.py  metrics.py  metrics_exact.py
phaseB-alex/inference/: ensemble_exact.py  judge_answers.py  merge_answers.py  overlay_merged_predictions.py  prep_exact_from_narrative.py  prompts_exact.json  prompts_old.json  reconcile_exact.py  run.py  run_bak.py  run_exact.py  select_best.py  to_bioasq_submission.py
phaseB-alex/loaders/: cloud.py  local.py
phaseB-alex/phaseB-testset1/outputs/exact/: google-gemini-2-0-flash-001_p3_abstracts_factoid.json  google-gemini-2-0-flash-001_p3_abstracts_list.json  google-gemini-2-0-flash-001_p3_abstracts_yesno.json  google-gemini-2-0-flash-001_p3_snippets_factoid.json  google-gemini-2-0-flash-001_p3_snippets_list.json  google-gemini-2-0-flash-001_p3_snippets_yesno.json  google-gemini-2-0-flash-001_p5_abstracts_factoid.json  google-gemini-2-0-flash-001_p5_abstracts_list.json  google-gemini-2-0-flash-001_p5_snippets_factoid.json  google-gemini-2-0-flash-001_p5_snippets_list.json  google-gemini-2-0-flash-001_p6_abstracts_factoid.json  google-gemini-2-0-flash-001_p6_abstracts_list.json  google-gemini-2-0-flash-001_p6_snippets_factoid.json  google-gemini-2-0-flash-001_p6_snippets_list.json  google-gemini-2-5-flash_p3_abstracts_factoid.json  google-gemini-2-5-flash_p3_abstracts_list.json  google-gemini-2-5-flash_p3_abstracts_yesno.json  google-gemini-2-5-flash_p3_snippets_factoid.json  google-gemini-2-5-flash_p3_snippets_list.json  google-gemini-2-5-flash_p3_snippets_yesno.json  google-gemini-2-5-flash_p5_abstracts_factoid.json  google-gemini-2-5-flash_p5_abstracts_list.json  google-gemini-2-5-flash_p5_abstracts_summary.json  google-gemini-2-5-flash_p5_snippets_factoid.json  google-gemini-2-5-flash_p5_snippets_list.json  google-gemini-2-5-flash_p5_snippets_summary.json  google-gemini-2-5-flash_p6_abstracts_factoid.json  google-gemini-2-5-flash_p6_abstracts_list.json  google-gemini-2-5-flash_p6_abstracts_summary.json  google-gemini-2-5-flash_p6_snippets_factoid.json  google-gemini-2-5-flash_p6_snippets_list.json  google-gemini-2-5-flash_p6_snippets_summary.json  qwen-qwen3-5-122b-a10b_p3_abstracts_factoid.json  qwen-qwen3-5-122b-a10b_p3_abstracts_list.json  qwen-qwen3-5-122b-a10b_p3_abstracts_yesno.json  qwen-qwen3-5-122b-a10b_p3_snippets_factoid.json  qwen-qwen3-5-122b-a10b_p3_snippets_list.json  qwen-qwen3-5-122b-a10b_p3_snippets_yesno.json  qwen-qwen3-5-122b-a10b_p5_abstracts_factoid.json  qwen-qwen3-5-122b-a10b_p5_abstracts_list.json  (+22 more)
phaseB-alex/phaseB-testset1/outputs/judged/: scores.json
phaseB-alex/phaseB-testset1/outputs/merged/: _overlay_summaries_from_claude_sweep.json  submission_1_topk1.json  submission_1_topk1_with_sweep_summaries.json  (+8 more)
phaseB-alex/phaseB-testset1/submission/: submission_1_topk1_official.json  submission_1topk_1_official.json  submission_2_topk_2_official.json  submission_N_topk1_with_sweep_summaries_official.json
phaseB-alex/synthesis/: prompts.json  synthesize.py
phaseB/back/: infrence_custom.py  initial_generation.py  summaries.py
phaseB/evaluation/: evaluate_hybrid.py  llm_judge.py  metrics.py  pixa.json  prediction_normalize.py  schemas.py
phaseB/inference/: run.py
phaseB/loaders/: base.py  cloud.py  dataloader.py  local.py
phaseB/synthesis/: synthesize.py
phaseB/utils/: convert_for_rerank.py  lookup_abstracts.py
(+251 files in other folders)
