[project]
name = "bioasq14b-phaseB"
version = "0.1.0"
description = "BioASQ 14b Phase B — answer generation pipeline"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "vllm>=0.6.0",
    "transformers>=4.40.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.0.0",
    "ipykernel>=7.2.0",
]
