[project]
name = "bioasq13b-phaseB"
version = "0.1.0"
description = "BioASQ 13b Phase B — answer generation pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "click>=8.0.0",
    "ipykernel>=7.2.0",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "openai>=1.0.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "rouge-score>=0.1.2",
    "tqdm>=4.0.0",
    "transformers>=4.57.6",
    "vllm>=0.17.0",
]

#[tool.uv.sources]
#transformers = { git = "https://github.com/huggingface/transformers.git" }
